<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kacper.firstapp.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/doYouPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/football_question" />

        <TextView
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/player_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/bestFootballPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/rl_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="@string/lm_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="@string/cr_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="@string/pp_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/areYouPlayerQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/are_you_player_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:text="@string/your_skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"/>

        <RatingBar
            android:id="@+id/yourSkills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/onOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/go_to_second_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendData"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
